# rust-library

./: .gitignore  preview-server.js  开发报告.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Books.tsx  Borrows.tsx  Dashboard.tsx  Readers.tsx
